--- a/dark.toml
+++ b/dark.toml
@@ -24,11 +24,19 @@ alignment = "left"
   template = "\ue701 {{ .UserName }} "
 
   [[blocks.segments]]
+  type = "python"
+  style = "diamond"
+  leading_diamond = "\ue0ba"
+  background = "#424242"
+  foreground = "#ffffff"
+  template = " \ue606 {{ .Venv }} "
+
+  [[blocks.segments]]
   type = "path"
   style = "diamond"
   leading_diamond = "\ue0ba"
   trailing_diamond = "\ue0c6"
-  background = "#424242"
+  background = "#323232"
   foreground = "#ffffff"
     [blocks.segments.properties]
     style = "mixed"
@@ -62,6 +70,17 @@ alignment = "right"
     discharging_icon = "\u26a1\uf433 "
     charging_icon = "\u26a1\uf431 "
     charged_icon = "\u26a1 "
+
+#  [[blocks.segments]]
+#  type = "sysinfo"
+#  style = "diamond"
+#  leading_diamond = "\ue0ba"
+#  trailing_diamond = "\ue0b4"
+#  background = "#323232"
+#  foreground = "#ffffff"
+#  template = " \ue266 {{ round .Load5 .Precision }}% \uf1c0 {{ round .PhysicalPercentUsed .Precision }}%"
+#    [blocks.segments.properties]
+#    precision = 1
 
 # Line 2 Left Side
 [[blocks]]
