--- a/themes/light.toml
+++ b/themes/light.toml
@@ -1,14 +1,16 @@
 version = 2
 final_space = true
 
+[palette]
+  foreground =  "#000000"
+  background0 = "#cfcfcf"
+  background1 = "#ffffff"
+  error =       "#ff0000"
+
 # Line 1 Left side
 [[blocks]]
 type = "prompt"
 alignment = "left"
-
-  # [[blocks.segments]]
-  # type = "upgrade"
-  # style = "block"
 
   [[blocks.segments]]
   type = "text"
@@ -18,17 +20,20 @@ alignment = "left"
   type = "text"
   style = "diamond"
   leading_diamond = "\ue0b6"
-  background = "#323232"
-  foreground = "#ffffff"
+  background = "p:background0"
+  foreground = "p:foreground"
   # template = "\uf1d0  {{ .UserName }} "
   template = "\ue701 {{ .UserName }} "
+
+  [[blocks.segments]]
+  type = "git"
 
   [[blocks.segments]]
   type = "python"
   style = "diamond"
   leading_diamond = "\ue0ba"
-  background = "#424242"
-  foreground = "#ffffff"
+  background = "p:background1"
+  foreground = "p:foreground"
   template = " \ue606 {{ .Venv }} "
 
   [[blocks.segments]]
@@ -36,8 +41,8 @@ alignment = "left"
   style = "diamond"
   leading_diamond = "\ue0ba"
   trailing_diamond = "\ue0c6"
-  background = "#323232"
-  foreground = "#ffffff"
+  background = "p:background0"
+  foreground = "p:foreground"
     [blocks.segments.properties]
     style = "mixed"
     home_icon = "\ue613  ~"
@@ -51,9 +56,9 @@ alignment = "right"
   type = "status"
   style = "diamond"
   leading_diamond = "\ue0c7 "
-  background = "#323232"
-  foreground = "#ffffff"
-  background_templates = [ "{{ if eq .Code 0 }}#323232{{ else }}#ff0000{{ end }}" ]
+  background = "p:background0"
+  foreground = "p:foreground"
+  background_templates = [ "{{ if eq .Code 0 }}p:background0{{ else }}p:error{{ end }}" ]
     [blocks.segments.properties]
     always_enabled = true
     status_template = "{{ if eq .Code 0 }}\uf49e{{ else }}\uf52f{{ end }}"
@@ -63,13 +68,20 @@ alignment = "right"
   style = "diamond"
   leading_diamond = "\ue0ba"
   trailing_diamond = "\ue0b4"
-  background = "#424242"
-  foreground = "#ffffff"
-  template = " {{ .Icon }}{{ .Percentage }}% "
+  background = "p:background1"
+  foreground = "p:foreground"
+  # template = " {{ .Icon }}{{ .Percentage }}% "
+  template = "{{ if not .Error }}{{ .Icon }}{{ .Percentage }}%{{ end }}{{ .Error }}"
     [blocks.segments.properties]
+    display_error = true
     discharging_icon = "\u26a1\uf433 "
     charging_icon = "\u26a1\uf431 "
     charged_icon = "\u26a1 "
+
+  [[blocks.segments]]
+  type = "text"
+  foreground = "p:background0"
+  template = "\ue0b4"
 
 #  [[blocks.segments]]
 #  type = "sysinfo"
